--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:e2e": "jest tests/e2e",
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "lint": "eslint --ext .ts src/"
   },
   "keywords": [],
   "author": "",
@@ -20,19 +21,24 @@
   "dependencies": {
     "dotenv": "^17.2.0",
     "ejs": "^3.1.10",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "express": "^5.1.0",
-    "nanoid": "^5.1.5",
+    "nanoid": "3.3.4",
     "pg": "^8.16.3"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.0.15",
+    "@types/node": "^24.1.0",
     "@types/pg": "^8.15.4",
     "@types/supertest": "^6.0.3",
-    "jest": "^30.0.4",
-    "jest-environment-node": "^30.0.4",
-    "supertest": "^7.1.3",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "jest": "^30.0.5",
+    "jest-environment-node": "^30.0.5",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.4.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
