--- a/package.json
+++ b/package.json
@@ -13,19 +13,30 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "lint": "eslint --ext .ts src/"
+    "lint": "eslint --ext .ts src/",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:deploy": "prisma migrate deploy",
+    "db:reset": "prisma migrate reset",
+    "db:studio": "prisma studio",
+    "db:seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.12.0",
+    "bullmq": "^5.37.0",
     "dotenv": "^17.2.0",
     "ejs": "^3.1.10",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "express": "^5.1.0",
+    "helmet": "^8.0.0",
+    "ioredis": "^5.4.1",
     "nanoid": "3.3.4",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.5",
@@ -33,11 +44,13 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^24.1.0",
     "@types/pg": "^8.15.4",
+    "@types/redis": "^2.8.32",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
     "jest": "^30.0.5",
     "jest-environment-node": "^30.0.5",
+    "prisma": "^6.12.0",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.0",
     "ts-node-dev": "^2.0.0",
