--- a/package.json
+++ b/package.json
@@ -31,16 +31,18 @@
     "ejs": "^3.1.10",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.0.1",
     "helmet": "^8.0.0",
     "ioredis": "^5.4.1",
     "nanoid": "3.3.4",
     "pg": "^8.16.3",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "zod": "^4.0.10"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.5",
-    "@types/express": "^5.0.3",
+    "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.1.0",
     "@types/pg": "^8.15.4",
